--- a/index.html
+++ b/index.html
@@ -1,53 +1,90 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Ürün Açıklayıcı</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
-    <h1 class="text-2xl font-bold mb-4 text-center">🛍️ AI Ürün Açıklayıcı</h1>
-    <input id="productInput" type="text" placeholder="Ürün adını yazın..." class="w-full p-3 border rounded mb-4" />
-    <button id="generateBtn" class="w-full bg-blue-600 text-white p-3 rounded hover:bg-blue-700 transition">
-      Açıklama Oluştur
-    </button>
-    <div id="result" class="mt-6 text-gray-700 whitespace-pre-wrap"></div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AI Ürün Açıklayıcı</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-100 flex items-center justify-center h-screen">
+    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+      <h1 class="text-2xl font-bold mb-4 text-center">🛍️ AI Ürün Açıklayıcı</h1>
+      <label for="language" class="block mb-2 font-medium"
+        >Açıklama Dili:</label
+      >
+      <select id="language" class="w-full p-3 border rounded mb-4">
+        <option value="tr">Türkçe</option>
+        <option value="en">English</option>
+      </select>
 
-  <script>
-    document.getElementById("generateBtn").addEventListener("click", async () => {
-      const productName = document.getElementById("productInput").value.trim();
-      if (!productName) return alert("Lütfen bir ürün adı girin.");
+      <input
+        id="productInput"
+        type="text"
+        placeholder="Ürün adını yazın..."
+        class="w-full p-3 border rounded mb-4"
+      />
+      <button
+        id="generateBtn"
+        class="w-full bg-blue-600 text-white p-3 rounded hover:bg-blue-700 transition"
+      >
+        Açıklama Oluştur
+      </button>
+      <div id="result" class="mt-6 text-gray-700 whitespace-pre-wrap"></div>
+    </div>
 
-      document.getElementById("result").innerText = "AI yazıyor...";
+    <script>
+      document
+        .getElementById("generateBtn")
+        .addEventListener("click", async () => {
+          const productName = document
+            .getElementById("productInput")
+            .value.trim();
+          if (!productName) return alert("Lütfen bir ürün adı girin.");
 
-      const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer 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"
-        },
-        body: JSON.stringify({
-          model: "llama3-8b-8192",
-          messages: [
+          document.getElementById("result").innerText = "AI yazıyor...";
+
+          const lang = document.getElementById("language").value;
+
+          const systemPrompt =
+            lang === "tr"
+              ? "Sen bir e-ticaret metin yazarı AI'sısın. Kullanıcı sana bir ürün adı verecek ve sen ona kısa ama ikna edici bir ürün açıklaması yazacaksın. Dil: Türkçe."
+              : "You are an AI e-commerce copywriter. The user will give you a product name, and you will return a short but compelling product description in English.";
+
+          const userPrompt =
+            lang === "tr"
+              ? `Ürün adı: ${productName}`
+              : `Product name: ${productName}`;
+
+          const response = await fetch(
+            "https://api.groq.com/openai/v1/chat/completions",
             {
-              role: "system",
-              content: "Sen bir e-ticaret metin yazarı AI'sısın. Kullanıcı sana bir ürün adı verecek ve sen ona kısa ama ikna edici bir ürün açıklaması yazacaksın."
-            },
-            {
-              role: "user",
-              content: `Ürün adı: ${productName}`
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization:
+                  "Bearer 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",
+              },
+              body: JSON.stringify({
+                model: "llama3-8b-8192",
+                messages: [
+                  {
+                    role: "system",
+                    content: systemPrompt,
+                  },
+                  {
+                    role: "user",
+                    content: userPrompt,
+                  },
+                ],
+              }),
             }
-          ]
-        })
-      });
+          );
 
-      const data = await response.json();
-      const result = data.choices?.[0]?.message?.content || "AI yanıt veremedi.";
-      document.getElementById("result").innerText = result;
-    });
-  </script>
-</body>
+          const data = await response.json();
+          const result =
+            data.choices?.[0]?.message?.content || "AI yanıt veremedi.";
+          document.getElementById("result").innerText = result;
+        });
+    </script>
+  </body>
 </html>
