add coppy button

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
         Açıklama Oluştur
       </button>
       <div id="result" class="mt-6 text-gray-700 whitespace-pre-wrap"></div>
+      <button
+        id="copyBtn"
+        class="mt-4 w-full bg-green-600 text-white p-2 rounded hover:bg-green-700 transition hidden"
+      >
+        Açıklamayı Kopyala
+      </button>
     </div>
-
     <script>
       document
         .getElementById("generateBtn")
@@ -39,11 +44,16 @@
           const productName = document
             .getElementById("productInput")
             .value.trim();
-          if (!productName) return alert("Lütfen bir ürün adı girin.");
+          const lang = document.getElementById("language").value;
+          const copyBtn = document.getElementById("copyBtn");
+
+          if (!productName) {
+            alert("Lütfen bir ürün adı girin.");
+            return;
+          }
 
           document.getElementById("result").innerText = "AI yazıyor...";
-
-          const lang = document.getElementById("language").value;
+          copyBtn.classList.add("hidden"); // önce gizle
 
           const systemPrompt =
             lang === "tr"
@@ -55,36 +65,55 @@
               ? `Ürün adı: ${productName}`
               : `Product name: ${productName}`;
 
-          const response = await fetch(
-            "https://api.groq.com/openai/v1/chat/completions",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-                Authorization:
-                  "Bearer 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",
-              },
-              body: JSON.stringify({
-                model: "llama3-8b-8192",
-                messages: [
-                  {
-                    role: "system",
-                    content: systemPrompt,
-                  },
-                  {
-                    role: "user",
-                    content: userPrompt,
-                  },
-                ],
-              }),
-            }
-          );
+          try {
+            const response = await fetch(
+              "https://api.groq.com/openai/v1/chat/completions",
+              {
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                  Authorization:
+                    "Bearer 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",
+                },
+                body: JSON.stringify({
+                  model: "llama3-8b-8192",
+                  messages: [
+                    { role: "system", content: systemPrompt },
+                    { role: "user", content: userPrompt },
+                  ],
+                }),
+              }
+            );
 
-          const data = await response.json();
-          const result =
-            data.choices?.[0]?.message?.content || "AI yanıt veremedi.";
-          document.getElementById("result").innerText = result;
+            const data = await response.json();
+            const result =
+              data?.choices?.[0]?.message?.content ||
+              "AI'dan anlamlı yanıt alınamadı.";
+
+            document.getElementById("result").innerText = result;
+            copyBtn.classList.remove("hidden"); // başarıyla geldiyse butonu göster
+          } catch (error) {
+            console.error("Hata:", error);
+            document.getElementById("result").innerText =
+              "Bir hata oluştu: " + error.message;
+          }
         });
+
+      document.getElementById("copyBtn").addEventListener("click", () => {
+        const text = document.getElementById("result").innerText;
+        navigator.clipboard
+          .writeText(text)
+          .then(() => {
+            const btn = document.getElementById("copyBtn");
+            btn.innerText = "✔️ Kopyalandı!";
+            setTimeout(() => {
+              btn.innerText = "Açıklamayı Kopyala";
+            }, 2000);
+          })
+          .catch((err) => {
+            alert("Kopyalama başarısız: " + err);
+          });
+      });
     </script>
   </body>
 </html>
