--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div id="result" class="mt-6 text-gray-700 whitespace-pre-wrap"></div>
       <button
         id="copyBtn"
-        class="w-full bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition font-medium mt-4"
+        class="hidden w-full bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition font-medium mt-4"
       >
         Açıklamayı Kopyala
       </button>
