--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a
         href="https://www.buymeacoffee.com/enginkayalw"
         target="_blank"
-        class="block mt-6 text-center"
+        class="flex justify-center mt-6 text-center"
       >
         <img
           src="./images/yellow-button.png"
