--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             .getElementById("productInput")
             .value.trim();
           const lang = document.getElementById("language").value;
-          const copyBtn = document.getElementById("copyBtn");
+          const category = document.getElementById("category").value;
 
-          const length = document.getElementById("length").value;
+          const copyBtn = document.getElementById("copyBtn");
 
           if (!productName) {
             alert("Lütfen bir ürün adı girin.");
