--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             .value.trim();
           const lang = document.getElementById("language").value;
           const category = document.getElementById("category").value;
+          const length = document.getElementById("length").value;
 
           const copyBtn = document.getElementById("copyBtn");
 
