add iinstagram post

--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
       >
         Açıklamayı Kopyala
       </button>
+      <button
+        id="generateInsta"
+        class="w-full mt-4 bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded"
+      >
+        Instagram Postu Oluştur
+      </button>
+
+      <div
+        id="instaResult"
+        class="mt-4 p-4 border rounded text-sm bg-gray-100 whitespace-pre-line hidden"
+      ></div>
+
       <a
         href="https://www.buymeacoffee.com/enginkayalw"
         target="_blank"
@@ -163,6 +175,56 @@
             alert("Kopyalama başarısız: " + err);
           });
       });
+
+      document
+        .getElementById("generateInsta")
+        .addEventListener("click", async () => {
+          const productName = document
+            .getElementById("productInput")
+            .value.trim();
+          const category =
+            document.getElementById("category")?.value || "genel";
+          const length = document.getElementById("length")?.value || "orta";
+
+          if (!productName) {
+            alert("Lütfen ürün adını girin.");
+            return;
+          }
+
+          const prompt = `Ürün adı: ${productName}. Kategori: ${category}. Açıklama uzunluğu: ${length}.`;
+
+          const response = await fetch(
+            "https://api.groq.com/openai/v1/chat/completions",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: "Bearer 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",
+              },
+              body: JSON.stringify({
+                model: "llama3-8b-8192",
+                messages: [
+                  {
+                    role: "system",
+                    content:
+                      "Sen bir e-ticaret sosyal medya uzmanı AI'sın. Kullanıcının verdiği ürün bilgilerine göre etkileyici bir Instagram postu ve alakalı hashtag'ler üret. Sadece Türkçe yaz. İlk satıra Instagram post metnini yaz, ikinci satıra 'Hashtagler:' yazıp hashtag listesini sırala.",
+                  },
+                  {
+                    role: "user",
+                    content: prompt,
+                  },
+                ],
+              }),
+            }
+          );
+
+          const data = await response.json();
+          const result = data.choices?.[0]?.message?.content;
+
+          const output = document.getElementById("instaResult");
+          output.innerText = result || "Bir şeyler ters gitti 😕";
+          output.classList.remove("hidden");
+        });
     </script>
   </body>
 </html>
