--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
       >
         Instagram Postu Oluştur
       </button>
+      <button
+        id="generateSEO"
+        class="w-full mt-4 bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
+      >
+        SEO Metni Oluştur
+      </button>
+
+      <div
+        id="seoResult"
+        class="mt-4 p-4 border rounded text-sm bg-gray-100 whitespace-pre-line hidden"
+      ></div>
 
       <div
         id="instaResult"
@@ -96,6 +107,8 @@
     </div>
 
     <script>
+      const API_KEY =
+        "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";
       document
         .getElementById("generateBtn")
         .addEventListener("click", async () => {
@@ -133,8 +146,7 @@
                 method: "POST",
                 headers: {
                   "Content-Type": "application/json",
-                  Authorization:
-                    "Bearer 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",
+                  Authorization: `Bearer ${API_KEY}`,
                 },
                 body: JSON.stringify({
                   model: "llama3-8b-8192",
@@ -199,7 +211,7 @@
               method: "POST",
               headers: {
                 "Content-Type": "application/json",
-                Authorization: "Bearer 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",
+                Authorization: `Bearer ${API_KEY}`,
               },
               body: JSON.stringify({
                 model: "llama3-8b-8192",
@@ -222,6 +234,55 @@
           const result = data.choices?.[0]?.message?.content;
 
           const output = document.getElementById("instaResult");
+          output.innerText = result || "Bir şeyler ters gitti 😕";
+          output.classList.remove("hidden");
+        });
+      document
+        .getElementById("generateSEO")
+        .addEventListener("click", async () => {
+          const productName = document
+            .getElementById("productInput")
+            .value.trim();
+          const category =
+            document.getElementById("category")?.value || "genel";
+          const length = document.getElementById("length")?.value || "orta";
+
+          if (!productName) {
+            alert("Lütfen ürün adını girin.");
+            return;
+          }
+
+          const prompt = `Ürün adı: ${productName}. Kategori: ${category}. Açıklama uzunluğu: ${length}. SEO başlık ve açıklama üret. Sadece Türkçe yaz.`;
+
+          const response = await fetch(
+            "https://api.groq.com/openai/v1/chat/completions",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: `Bearer ${API_KEY}`,
+              },
+              body: JSON.stringify({
+                model: "llama3-8b-8192",
+                messages: [
+                  {
+                    role: "system",
+                    content:
+                      "Sen bir e-ticaret SEO uzmanı AI'sın. Verilen ürün bilgilerine göre Türkçe bir SEO meta başlığı (60 karakteri geçmesin) ve ardından bir meta açıklama (150–160 karakter) üret. Şu formatı koru:\n\nMeta Title: ...\nMeta Description: ...",
+                  },
+                  {
+                    role: "user",
+                    content: prompt,
+                  },
+                ],
+              }),
+            }
+          );
+
+          const data = await response.json();
+          const result = data.choices?.[0]?.message?.content;
+
+          const output = document.getElementById("seoResult");
           output.innerText = result || "Bir şeyler ters gitti 😕";
           output.classList.remove("hidden");
         });
