--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AI Ürün Açıklayıcı</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-[url('https://picsum.photos/seed/picsum/1920/1080')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen m-0 flex items-center justify-center p-6">
+  <body class="bg-[url('https://picsum.photos/1920/1080')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen m-0 flex items-center justify-center p-6">
     <div class="bg-black-0.6 p-6 rounded-xl shadow-2xl w-full max-w-xl ">
       <h1 class="text-3xl font-bold mb-4 text-center">🛍️ AI Ürün Açıklayıcı</h1>
       <label for="language" class="block mb-2 font-medium"
