transperent card view

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-[url('https://picsum.photos/1920/1080')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen m-0 flex items-center justify-center p-6">
-    <div class="bg-black-0.6 p-6 rounded-xl shadow-2xl w-full max-w-xl ">
-      <h1 class="text-3xl font-bold mb-4 text-center">🛍️ AI Ürün Açıklayıcı</h1>
+    <div class="bg-gray-100/50 p-6 rounded-xl shadow-2xl w-full max-w-xl ">
+      <h1 class="text-3xl text-black font-bold mb-4 text-center">🛍️ Ürününüzü AI Anlatsın!</h1>
+      <p class="text-md text-black  mb-2">Yapay zekâ destekli açıklamalarla ürünlerinizi saniyeler içinde etkileyici bir şekilde tanıtan, profesyonel metinler hazırlayın.</p>
       <label for="language" class="block mb-2 font-medium"
         >Açıklama Dili:</label
       >
