--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <title>AI Ürün Açıklayıcı</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-[url('https://picsum.photos/1920/1080')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen m-0 flex items-center justify-center p-6">
-    <div class="bg-gray-100/50 p-6 rounded-xl shadow-2xl w-full max-w-xl ">
-      <h1 class="text-3xl text-black font-bold mb-4 text-center">🛍️ Ürününüzü AI Anlatsın!</h1>
-      <p class="text-md text-black  mb-2">Yapay zekâ destekli açıklamalarla ürünlerinizi saniyeler içinde etkileyici bir şekilde tanıtan, profesyonel metinler hazırlayın.</p>
+  <body
+    class="bg-[url('https://picsum.photos/1920/1080')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen m-0 flex items-center justify-center p-6"
+  >
+    <div class="bg-gray-100/50 p-6 rounded-xl shadow-2xl w-full max-w-xl">
+      <h1 class="text-3xl text-black font-bold mb-4 text-center">
+        🛍️ Ürününüzü AI Anlatsın!
+      </h1>
+      <p class="text-md text-black mb-2">
+        Yapay zekâ destekli açıklamalarla ürünlerinizi saniyeler içinde
+        etkileyici bir şekilde tanıtan, profesyonel metinler hazırlayın.
+      </p>
       <label for="language" class="block mb-2 font-medium"
         >Açıklama Dili:</label
       >
@@ -147,9 +154,7 @@
     </div>
 
     <script>
-      // 🔐 Groq API anahtarını değişken olarak tanımla
-      const GROQ_API_KEY = "Bearer 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";
-
+ 
       // ✅ Ortak indirme fonksiyonu
       function downloadText(filename, text) {
         const blob = new Blob([text], { type: "text/plain" });
@@ -173,31 +178,26 @@
           if (!productName) return alert("Lütfen ürün adını girin.");
 
           const prompt = `Ürün adı: ${productName}. Kategori: ${category}. Açıklama uzunluğu: ${length}.`;
-
-          const response = await fetch(
-            "https://api.groq.com/openai/v1/chat/completions",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-                Authorization: GROQ_API_KEY,
-              },
-              body: JSON.stringify({
-                model: "llama3-8b-8192",
-                messages: [
-                  {
-                    role: "system",
-                    content:
-                      "Sen bir e-ticaret metin yazarı AI'sısın. Kullanıcı sana bir ürün adı verecek ve sen ona kısa ama ikna edici bir ürün açıklaması yazacaksın. Dil: Türkçe.",
-                  },
-                  {
-                    role: "user",
-                    content: prompt,
-                  },
-                ],
-              }),
-            }
-          );
+          const response = await fetch("/api/groq-proxy", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              model: "llama3-8b-8192",
+              messages: [
+                {
+                  role: "system",
+                  content:
+                    "Sen bir e-ticaret metin yazarı AI'sısın. Kullanıcı sana bir ürün adı verecek ve sen ona kısa ama ikna edici bir ürün açıklaması yazacaksın. Dil: Türkçe.",
+                },
+                {
+                  role: "user",
+                  content: prompt,
+                },
+              ],
+            }),
+          });
 
           const data = await response.json();
           const result = data.choices?.[0]?.message?.content;
