--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
     </div>
 
     <script>
- 
       // ✅ Ortak indirme fonksiyonu
       function downloadText(filename, text) {
         const blob = new Blob([text], { type: "text/plain" });
@@ -235,30 +234,26 @@
 
           const prompt = `Ürün adı: ${productName}. Kategori: ${category}. Açıklama uzunluğu: ${length}.`;
 
-          const response = await fetch(
-            "https://api.groq.com/openai/v1/chat/completions",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-                Authorization: GROQ_API_KEY,
-              },
-              body: JSON.stringify({
-                model: "llama3-8b-8192",
-                messages: [
-                  {
-                    role: "system",
-                    content:
-                      "Sen bir e-ticaret sosyal medya uzmanı AI'sın. Kullanıcının verdiği ürün bilgilerine göre etkileyici bir Instagram postu ve alakalı hashtag'ler üret. Sadece Türkçe yaz. İlk satıra Instagram post metnini yaz, ikinci satıra 'Hashtagler:' yazıp hashtag listesini sırala.",
-                  },
-                  {
-                    role: "user",
-                    content: prompt,
-                  },
-                ],
-              }),
-            }
-          );
+          const response = await fetch("/api/groq-proxy", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              model: "llama3-8b-8192",
+              messages: [
+                {
+                  role: "system",
+                  content:
+                    "Sen bir e-ticaret sosyal medya uzmanı AI'sın. Kullanıcının verdiği ürün bilgilerine göre etkileyici bir Instagram postu ve alakalı hashtag'ler üret. Sadece Türkçe yaz. İlk satıra Instagram post metnini yaz, ikinci satıra 'Hashtagler:' yazıp hashtag listesini sırala.",
+                },
+                {
+                  role: "user",
+                  content: prompt,
+                },
+              ],
+            }),
+          });
 
           const data = await response.json();
           const result = data.choices?.[0]?.message?.content;
@@ -296,30 +291,26 @@
 
           const prompt = `Ürün adı: ${productName}. Kategori: ${category}. Açıklama uzunluğu: ${length}. SEO başlık ve açıklama üret.`;
 
-          const response = await fetch(
-            "https://api.groq.com/openai/v1/chat/completions",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-                Authorization: GROQ_API_KEY,
-              },
-              body: JSON.stringify({
-                model: "llama3-8b-8192",
-                messages: [
-                  {
-                    role: "system",
-                    content:
-                      "Sen bir e-ticaret SEO uzmanı AI'sın. Verilen ürün bilgilerine göre Türkçe bir SEO meta başlığı (60 karakteri geçmesin) ve ardından bir meta açıklama (150–160 karakter) üret. Şu formatı koru:\n\nMeta Title: ...\nMeta Description: ...",
-                  },
-                  {
-                    role: "user",
-                    content: prompt,
-                  },
-                ],
-              }),
-            }
-          );
+          const response = await fetch("/api/groq-proxy", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+              model: "llama3-8b-8192",
+              messages: [
+                {
+                  role: "system",
+                  content:
+                    "Sen bir e-ticaret SEO uzmanı AI'sın. Verilen ürün bilgilerine göre Türkçe bir SEO meta başlığı (60 karakteri geçmesin) ve ardından bir meta açıklama (150–160 karakter) üret. Şu formatı koru:\n\nMeta Title: ...\nMeta Description: ...",
+                },
+                {
+                  role: "user",
+                  content: prompt,
+                },
+              ],
+            }),
+          });
 
           const data = await response.json();
           const result = data.choices?.[0]?.message?.content;
